重构代理系统：优化工具和沙箱功能
- 重构代理执行器：CodeAgent、FileAgent、SearchAgent
- 优化思考代理：ThinkingAgent和ReflectionAgent
- 改进工具系统：BrowserTool、FileTool、PythonTool、ReflectionTool
- 增强沙箱功能：新增DockerClientManager、ExecutionResult、VncSandboxInfo
- 更新工作流：ThinkDoReflectWorkflow
- 添加Docker支持：docker-compose.yml和dotenv.example
- 更新文档：QUICK_START.md，移除过时的配置文档